fixed huge numbers in forecast
fixed overlapping in SCC that made forecast temperature look as huge as main temperature numbers

--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,7 @@ top: 0px;
 font-size: 14px;
 }
 
-.weather-app strong {
+.weather-temperature strong {
     margin: 0 5px 0 0;
     line-height: 1;
     font-size: 58px;
